modified:   .gitignore 	modified:   README-DOCKER.md 	modified:   docker-compose.yml 	modified:   electron/diag-main.js 	new file:   electron/diag-output.txt 	modified:   electron/main.js 	new file:   electron/main.js.map 	modified:   electron/main.ts 	new file:   electron/package-lock.json 	new file:   electron/preload.js 	new file:   electron/preload.js.map 	modified:   electron/preload.ts 	modified:   frontend/src/app/app.ts 	modified:   frontend/src/app/services/api.ts 	modified:   frontend/src/app/services/logger.service.ts 	modified:   package-lock.json 	modified:   package.json 	modified:   pom.xml 	modified:   scripts/deploy-gcp.sh 	modified:   scripts/diagnose-ws.js 	modified:   scripts/generate-docker-env.js 	modified:   src/main/java/br/com/lolmatchmaking/backend/config/WebSocketConfig.java 	new file:   src/main/java/br/com/lolmatchmaking/backend/controller/FrontendLogController.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/controller/LcuInfoController.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/controller/LcuProxyController.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/controller/SyncController.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/dto/LcuInfo.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/service/LCUService.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/service/LcuConfigService.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/service/MultiBackendSyncService.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/service/SyncObserver.java 	modified:   src/main/java/br/com/lolmatchmaking/backend/websocket/MatchmakingWebSocketService.java 	modified:   src/main/resources/application-docker.yml 	modified:   src/main/resources/application-local.yml 	modified:   src/main/resources/application.yml